--- a/webserver/views/login.html
+++ b/webserver/views/login.html
@@ -1,9 +1,9 @@
 {{##def.page_title = 'Login' #}}
 
 {{##def.content:
-<script src='https://www.google.com/recaptcha/api.js'></script>
+<!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
 <script>
-	var submitEnabled = false;
+	var submitEnabled = true;
   function enableSubmit() {
 	  submitEnabled = true;
     var s = document.getElementById('loginSubmit');
@@ -36,13 +36,13 @@
                 </label>
             </div>
         </div>
-         <div class="row">
+         <!-- <div class="row">
             <div class="g-recaptcha" data-sitekey="{{=it.recaptchaKey}}" data-callback="enableSubmit"></div>
-         </div>
+         </div> -->
          <div class="row">
             <div class="large-12 columns">
                 <a class="small" href="/forgot-password">Forgot your password?</a>
-                <input id="loginSubmit" style="display: none" class="border-button right blue" value="Login" type="submit" />
+                <input id="loginSubmit" class="border-button right blue" value="Login" type="submit" />
             </div>
         </div>
 
